add cmake and fix java lsp cmd